--- a/style.css
+++ b/style.css
@@ -35,6 +35,18 @@
     margin:10px
 }
 
+input:invalid {
+  border: 2px dashed black;
+}
+
+input:invalid:required {
+    border: 2px dashed red;
+  }
+
+input:valid {
+  border: 2px solid black;
+}
+
 .catalog{
     /*
     border-style: dashed;
